--- a/client/src/components/modules/NewPostInput.css
+++ b/client/src/components/modules/NewPostInput.css
@@ -5,16 +5,23 @@
   padding: var(--s) var(--m);
 }
 
+:root {
+  --commonMargin: 30%; /* common variable */
+}
+
 .NewPostInput-input {
   flex-grow: 1;
   border: var(--darkgrey) 1px solid;
   border-radius: var(--xs) 0 0 var(--xs);
   transition: box-shadow 0.1s;
+  margin-left: var(--commonMargin);
+  margin-right: auto;
 }
 
 .NewPostInput-input:focus-within {
   border-color: var(--primary--dim);
-  box-shadow: 0 0 0 var(--xs) rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 var(--xs) var(--purple2);
+  
 }
 
 .NewPostInput-button {
@@ -23,6 +30,7 @@
   border-radius: 0 var(--xs) var(--xs) 0;
   background: none;
   transition: color 0.1s, background 0.1s;
+  margin-right: var(--commonMargin);
 }
 
 .NewPostInput-button:hover {
