--- a/client/src/components/pages/PlayRoom.css
+++ b/client/src/components/pages/PlayRoom.css
@@ -4,3 +4,38 @@
 } */
 
 /* this is broken oops */
+
+
+.game-board {
+  margin: auto;
+}
+
+.leaveRoomButton {
+  border: none;
+  background-color: var(--purple1);
+  justify-content: end;
+  color: white;
+
+  margin-right: 0;
+  margin-left: auto;
+
+  padding: 16px 32px;
+
+  text-align: center;
+  font-size: 16px;
+  transition-duration: 0.4s;
+  opacity: .8;
+  border-radius: 20px;
+
+  float: right;
+  margin-right: 3%;
+
+}
+
+.leaveRoomButton:hover {
+  opacity: 1;
+}
+
+.leaveRoomButton:active {
+  opacity: .5;
+}
