--- a/client/src/components/pages/Game.css
+++ b/client/src/components/pages/Game.css
@@ -1,5 +1,5 @@
 .game-board {
-    background-color: black;
+    background-color: none;
     width: 150vmin;
     height: 80vmin;
     display: grid;
@@ -7,4 +7,6 @@
     grid-template-columns: repeat(30, 1fr);
     grid-auto-rows: 0;
     grid-auto-columns: 0;
+
+    padding: 30px;
   }
