--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -38,9 +38,10 @@ Added colors
   --progress-green: #85FF9E;
   --purple1: #AF90A9;
   --purple2: #eb9ec0;
+  --primary3: #fbffec;
   --darkgrey: #575757;
   --medgrey: #acacac;
-  --grey: #bfc1bd;
+  --grey: #a6b4ac;
   --white: #fff;
 
   --xs: 4px;
