--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -38,10 +38,10 @@ Added colors
   --progress-green: #85FF9E;
   --purple1: #AF90A9;
   --purple2: #eb9ec0;
-  --primary3: #fbffec;
+  --primary3: #faecf2;
   --darkgrey: #575757;
   --medgrey: #acacac;
-  --grey: #a6b4ac;
+  --grey: #94838a;
   --white: #fff;
 
   --xs: 4px;
