--- a/client/src/components/modules/ProgressBars.css
+++ b/client/src/components/modules/ProgressBars.css
@@ -6,7 +6,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding: 25px;
+  }
+
+  .progressBars h3 {
+      margin-bottom: 0px;
   }
   
   .progressHolder {
@@ -15,7 +19,7 @@
     border: 3px;
     border-color: gray;
     border-style: solid;
-    margin: 20px ;
+    margin: 15px ;
     width: 100%;
 
     border-radius: 20px;
