--- a/client/src/components/pages/Game.css
+++ b/client/src/components/pages/Game.css
@@ -1,13 +1,20 @@
 .game-board {
-    background-color: none;
-    width: 120vmin;
-    height: 64vmin;
+  background-color: var(--primary);
+    /* width: 120vmin;
+    height: 64vmin; */
+    width: 105vmin;
+    height: 56vmin;
+    margin: auto;
+
     display: grid;
-    grid-template-rows: repeat(16, 1fr);
-    grid-template-columns: repeat(30, 1fr);
+    grid-template-rows: repeat(16, 3.5vmin);
+    grid-template-columns: repeat(30, 3.5vmin);
     grid-auto-rows: 0;
     grid-auto-columns: 0;
 
     padding: 30px;
+    border-radius: 30px;
+    text-align: center;
   }
+
 
