popup and tile css

--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -37,11 +37,11 @@ Added colors
   --primary--dim: #3dbbff;
   --progress-green: #85FF9E;
   --purple1: #AF90A9;
-  --purple2: #eb9ec0;
+  --purple2: #ffa2ca;
   --primary3: #faecf2;
   --darkgrey: #575757;
   --medgrey: #acacac;
-  --grey: #94838a;
+  --grey: #a18491;
   --white: #fff;
 
   --xs: 4px;
