--- a/client/src/components/pages/Skeleton.css
+++ b/client/src/components/pages/Skeleton.css
@@ -37,16 +37,12 @@ body {
   }
 
 
-.minesweeperButtonContainer div a {
-    height: 9vw;
-    width: 9vw;
+.minesweeperButtonContainer div button {
     margin: none;
     justify-content: center;
     font-size: 1.3vw;
 
-    margin: auto;
     border: 15px;
-    padding: 25px;
 
 
     display:flex;
@@ -62,37 +58,45 @@ body {
 
     background-size: contain;
 
+    height: 20vmin;
+    width: 20vmin;
+
     border: none;
-    color: white;
-    padding: 20px 34px;
+    color: var(--darkgrey);
+
+    padding: 2vmin 2vmin;
+    
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 20px;
-    margin: 10px 2px;
+
+    margin: 0px;
     cursor: pointer;
+
     opacity: .8;
   }
 
-  .minesweeperButton:hover {
-    opacity: 1;
-  }
+.minesweeperButton:hover {
+  opacity: 1;
+  color: var(--grey)
+}
 
-  .minesweeperButton:active {
-    opacity: .5;
-  }
+.minesweeperButton:active {
+  opacity: .5;
+}
 
-  .roomCount {
-      margin-top: 10px;
-      margin-bottom: 30px;
-  }
+.roomCount {
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
 
-  .rulesBox { /* edit!! */
-      margin:var(--sper) var(--mper) var(--sper) var(--mper);
-      background-color: var(--grey);
-      padding: 15px 32px;
-      text-align: center;
-      text-decoration: none;
-      display: block;
-      border-radius: 50px;
-      }
+.rulesBox { /* edit!! */
+    margin:var(--sper) var(--mper) var(--sper) var(--mper);
+    background-color: var(--grey);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    border-radius: 50px;
+    }
