--- a/client/src/components/pages/Skeleton.css
+++ b/client/src/components/pages/Skeleton.css
@@ -32,11 +32,11 @@ body {
 }
 
 .minesweeperButtonContainer div button {
-    margin: none;
-    justify-content: center;
-    font-size: 1.3vw;
+  margin: none;
+  justify-content: center;
+  font-size: 1.3vw;
 
-    border: 15px;
+  border: 15px;
 
   display: flex;
   justify-content: center;
@@ -45,51 +45,56 @@ body {
   word-break: break-all;
 }
 
+.minesweeperButtonContainer div a {
+  text-decoration: none;
+}
+
 .minesweeperButton {
-    background-image: url("../../public/images/blocktemp.png");
-    background-repeat: no-repeat;
+  background-image: url("../../public/images/blocktemp.png");
+  background-repeat: no-repeat;
 
-    background-size: contain;
+  background-size: contain;
 
-    height: 20vmin;
-    width: 20vmin;
+  height: 20vmin;
+  width: 20vmin;
 
-    border: none;
-    color: var(--darkgrey);
+  border: none;
+  color: var(--darkgrey);
 
-    padding: 2vmin 2vmin;
-    
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
+  padding: 2vmin 2vmin;
 
-    margin: 0px;
-    cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
 
-    opacity: .8;
-  }
+  margin: 0px;
+  cursor: pointer;
+
+  opacity: 0.8;
+}
 
 .minesweeperButton:hover {
   opacity: 1;
-  color: var(--grey)
+  color: var(--grey);
 }
 
 .minesweeperButton:active {
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .roomCount {
-    margin-top: 10px;
-    margin-bottom: 30px;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
-.rulesBox { /* edit!! */
-    margin:var(--sper) var(--mper) var(--sper) var(--mper);
-    background-color: var(--grey);
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: block;
-    border-radius: 50px;
-    }
+.rulesBox {
+  /* edit!! */
+  margin: var(--sper) var(--mper) var(--sper) var(--mper);
+  background-color: var(--grey);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  border-radius: 50px;
+}
