--- a/client/src/components/pages/PlayRoom.css
+++ b/client/src/components/pages/PlayRoom.css
@@ -33,3 +33,22 @@
 .leaveRoomButton:active {
   opacity: .5;
 }
+
+
+.gameRoom {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.gameRoom.game-board {
+  flex-grow: 1;
+}
+
+.gameRoom.progressBars {
+  flex-grow: 3;
+}
+
+/* .gameRoom h1 {
+  width: 105vmin;
+} */
