--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -41,7 +41,7 @@ Added colors
   --primary3: #faecf2;
   --darkgrey: #575757;
   --medgrey: #acacac;
-  --grey: #a18491;
+  --grey: #8f898c;
   --white: #fff;
 
   --xs: 4px;
