--- a/client/src/components/pages/Game.css
+++ b/client/src/components/pages/Game.css
@@ -1,29 +1,111 @@
 .game-board {
   background-color: var(--primary);
-    /* width: 120vmin;
+  /* width: 120vmin;
     height: 64vmin; */
-    width: 105vmin;
-    height: 56vmin;
-    margin-left: 5%;
-    margin-right: 2%;
+  width: 105vmin;
+  height: 56vmin;
+  margin-left: 5%;
+  margin-right: 2%;
 
-    display: grid;
-    grid-template-rows: repeat(16, 3.5vmin);
-    grid-template-columns: repeat(30, 3.5vmin);
-    grid-auto-rows: 0;
-    grid-auto-columns: 0;
+  display: grid;
+  grid-template-rows: repeat(16, 3.5vmin);
+  grid-template-columns: repeat(30, 3.5vmin);
+  grid-auto-rows: 0;
+  grid-auto-columns: 0;
 
-    padding: 20px;
-    border-radius: 15px;
-    text-align: center;
+  padding: 20px;
+  border-radius: 15px;
+  text-align: center;
+}
 
-
-  }
-
-  .game-board > * {
+.game-board > * {
   word-break: break-all;
-  }
+}
 
-  .game-board h1 {
-    width: 105vmin;
-  }
+.game-board h1 {
+  width: 105vmin;
+}
+
+.game-board-small {
+  background-color: var(--primary);
+  /* width: 120vmin;
+    height: 64vmin; */
+  width: 31.5vmin;
+  height: 31.5vmin;
+  margin-left: 5%;
+  margin-right: 2%;
+
+  display: grid;
+  grid-template-rows: repeat(9, 3.5vmin);
+  grid-template-columns: repeat(9, 3.5vmin);
+  grid-auto-rows: 0;
+  grid-auto-columns: 0;
+
+  padding: 20px;
+  border-radius: 15px;
+  text-align: center;
+}
+
+.game-board-small > * {
+  word-break: break-all;
+}
+
+.game-board-small h1 {
+  width: 105vmin;
+}
+
+.game-board-medium {
+  background-color: var(--primary);
+  /* width: 120vmin;
+    height: 64vmin; */
+  width: 56vmin;
+  height: 56vmin;
+  margin-left: 5%;
+  margin-right: 2%;
+
+  display: grid;
+  grid-template-rows: repeat(16, 3.5vmin);
+  grid-template-columns: repeat(16, 3.5vmin);
+  grid-auto-rows: 0;
+  grid-auto-columns: 0;
+
+  padding: 20px;
+  border-radius: 15px;
+  text-align: center;
+}
+
+.game-board-medium > * {
+  word-break: break-all;
+}
+
+.game-board-medium h1 {
+  width: 105vmin;
+}
+
+.game-board-large {
+  background-color: var(--primary);
+  /* width: 120vmin;
+    height: 64vmin; */
+  width: 105vmin;
+  height: 56vmin;
+  margin-left: 5%;
+  margin-right: 2%;
+
+  display: grid;
+  grid-template-rows: repeat(16, 3.5vmin);
+  grid-template-columns: repeat(30, 3.5vmin);
+  grid-auto-rows: 0;
+  grid-auto-columns: 0;
+
+  padding: 20px;
+  border-radius: 15px;
+  text-align: center;
+}
+
+.game-board-large > * {
+  word-break: break-all;
+}
+
+.game-board-large h1 {
+  width: 105vmin;
+}
