--- a/client/src/components/pages/Howtoplay.css
+++ b/client/src/components/pages/Howtoplay.css
@@ -1,11 +1,11 @@
 .rulesBox {
   /* edit!! */
   margin: var(--sper) var(--mper) var(--sper) var(--mper);
-  background-color: var(--grey);
+  background-color: pink;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: block;
   border-radius: 50px;
-  color: white;
+  /* color: white; */
 }
