--- a/client/src/components/modules/Chat.css
+++ b/client/src/components/modules/Chat.css
@@ -4,12 +4,15 @@
 }
 
 .Chat-newContainer {
+  display: flex;
+  flex-direction: column-reverse;
   width: 100%;
   margin-left: none;
 }
 
-
 .Chat-historyContainer {
+  display: flex;
+  flex-direction: column-reverse;
   flex-grow: 1;
   overflow-y: auto;
 }
