--- a/client/src/components/pages/Profile.css
+++ b/client/src/components/pages/Profile.css
@@ -8,8 +8,18 @@
   border-radius: 50px;
 }
 
+.statContainer {
+  margin-top: 30px;
+  margin-left: 50px;
+  margin-right: 50px;
+
+  background-color: aquamarine;
+  padding: 5px;
+  border-radius: 50px;
+}
+
 .name {
-  flex-grow: .5;
+  flex-grow: 0.5;
 }
 
 .stats {
@@ -32,6 +42,5 @@ th {
 }
 
 .loadingPage {
- /* could add animations */
-
+  /* could add animations */
 }
