--- a/client/src/components/pages/PlayRoom.css
+++ b/client/src/components/pages/PlayRoom.css
@@ -49,14 +49,6 @@
   flex-grow: 3;
 }
 
-.coverUp {
-  background-color: rgba(185,230,255,0.5);
-  position: absolute;
-
-  z-index: 999;
-  color:white;
-  font-size: 6em;
-}
 
 .small {
   width: 31.5vmin;
@@ -73,8 +65,19 @@
   height: 56vmin;
 }
 
+.coverUp {
+  background-color: #b9e6ff80;
+  position: absolute;
+
+  z-index: 999;
+  color:white;
+  font-size: 6em;
+}
+
 .coverUp h1 {
   opacity: 0.8;
+  text-align: center;
+  align-self: center;
 }
 
 
