--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -35,7 +35,7 @@ Added colors
 :root {
   --primary: #B9E6FF;
   --primary--dim: #3dbbff;
-  --progress-green: #85FF9E;
+  --progress-green: aquamarine;
   --purple1: #AF90A9;
   --purple2: #ffa2ca;
   --primary3: #faecf2;
