--- a/client/src/components/modules/ProgressBars.css
+++ b/client/src/components/modules/ProgressBars.css
@@ -1,38 +1,52 @@
-
 .progressBars {
-    padding: none;
-    text-align: center;
+  padding: none;
+  text-align: center;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 25px;
-    padding-right: 40px ;
-    padding-left: 2%;
-    width: 50vmin;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 25px;
+  padding-right: 40px;
+  padding-left: 2%;
+  width: 50vmin;
+}
 
-  .progressBars h3 {
-      margin-bottom: 0px;
-  }
-  
-  .progressHolder {
-    padding: 4px;
-    height: 40px;
-    border: 3px;
-    border-color: gray;
-    border-style: solid;
-    margin-top: 15px ;
-    width: 100%;
+.progressBars h3 {
+  margin-bottom: 0px;
+}
 
-    border-radius: 20px;
+.progressHolder {
+  padding: 4px;
+  height: 40px;
+  border: 3px;
+  border-color: gray;
+  border-style: solid;
+  margin-top: 15px;
+  width: 100%;
 
-  }
-  
-  .progressHolder div {
-    background-color: var(--progress-green);
-    height: 40px;
-    border-radius: 15px;  
-  }
-  
-  
+  border-radius: 20px;
+}
+
+.progressHolder div {
+  background-color: var(--progress-green);
+  height: 40px;
+  border-radius: 15px;
+}
+
+.progressHolderDone {
+  padding: 4px;
+  height: 40px;
+  border: 3px;
+  border-color: gray;
+  border-style: solid;
+  margin-top: 15px;
+  width: 100%;
+
+  border-radius: 20px;
+}
+
+.progressHolderDone div {
+  background-color: var(--purple2);
+  height: 40px;
+  border-radius: 15px;
+}
