--- a/client/src/components/modules/ProgressBars.css
+++ b/client/src/components/modules/ProgressBars.css
@@ -50,3 +50,21 @@
   height: 40px;
   border-radius: 15px;
 }
+
+.progressHolderFrozen {
+  padding: 4px;
+  height: 40px;
+  border: 3px;
+  border-color: gray;
+  border-style: solid;
+  margin-top: 15px;
+  width: 100%;
+
+  border-radius: 20px;
+}
+
+.progressHolderFrozen div {
+  background-color: aqua;
+  height: 40px;
+  border-radius: 15px;
+}
