--- a/client/src/components/pages/PlayRoom.css
+++ b/client/src/components/pages/PlayRoom.css
@@ -2,15 +2,24 @@
   display: block;
 }
 
-.roomHeader {
+/* .roomHeader {
   display: flex;
   justify-content: space-between;
+} */
+
+.roomTitle {
+  position: absolute;
+  top: 10px;
 }
 
 .leaveRoomButton {
+  position: absolute;
+  top: 10px;
+}
+
+.button {
   border: none;
   background-color: pink;
-  justify-content: end;
   /* color: white; */
 
   margin-right: 0;
@@ -31,11 +40,11 @@
   right: 0;
 }
 
-.leaveRoomButton:hover {
+.button:hover {
   opacity: 1;
 }
 
-.leaveRoomButton:active {
+.button:active {
   opacity: 0.5;
 }
 
