--- a/client/src/components/pages/PlayRoom.css
+++ b/client/src/components/pages/PlayRoom.css
@@ -43,8 +43,18 @@
   display: flex;
   width: 100%;
   justify-content: space-evenly;
+  font-size: 2vmin;
 }
 
+.gameRoom h1 button h3 {
+  margin: 0;
+  font-weight: 100;
+  font-size: 2vmin;
+}
+button {
+  font-size: 2vmin;
+  height: 8vmin;
+}
 .gameRoom.game-board {
   flex-grow: 1;
 }
