--- a/client/src/components/pages/Profile.css
+++ b/client/src/components/pages/Profile.css
@@ -1,6 +1,5 @@
 /* Overall */
 
-
 .profile {
   width: 100%;
   height: 70vh;
@@ -17,7 +16,7 @@
   background-color: pink;
   padding: 30px;
   border-radius: 50px;
-  
+
   box-shadow: 0 0 15px 2px gray;
 }
 .Profile-name {
@@ -30,7 +29,6 @@
   width: 100%;
   font-size: 2vh;
 }
-
 
 /* Right side */
 
@@ -53,7 +51,6 @@
   height: 80%;
 
   box-shadow: 0 0 15px 2px gray;
-
 }
 
 .statContainer h1 {
@@ -72,12 +69,10 @@
   font-size: 3vh;
 }
 
-
 .stats {
   margin: 30px;
   font-size: 2vh;
 }
-
 
 table {
   width: 100%;
@@ -98,7 +93,8 @@ th {
   background-color: pink;
   /* color: white; */
 
-  padding: 20px 50px 20px 50px;
+  /* padding: 20px 50px 20px 50px; */
+  padding: 16px 32px;
 
   text-align: center;
   font-size: 3vh;
@@ -116,7 +112,6 @@ th {
 .tabItem:active {
   opacity: 0.5;
 }
-
 
 .loadingPage {
   /* could add animations */
