--- a/client/src/components/pages/PlayRoom.css
+++ b/client/src/components/pages/PlayRoom.css
@@ -73,12 +73,28 @@ button {
 }
 
 .coverUp {
-  background-color: rgba(185, 230, 255, 0.5);
+  background-color: #b9e6ff80;
   position: absolute;
 
   z-index: 999;
   color: white;
   font-size: 4em;
+}
+
+.coverUpGameOver {
+  background-color: #fdb9ff80;
+  position: absolute;
+
+  z-index: 999;
+  color: white;
+  font-size: 4em;
+}
+
+.coverUpGameOver h1 {
+  opacity: 0.8;
+  text-align: center;
+  align-self: center;
+  width: 100%;
 }
 
 .small {
