--- a/client/src/components/pages/Leaderboard.css
+++ b/client/src/components/pages/Leaderboard.css
@@ -4,19 +4,49 @@
     margin-top: 30px;
     padding: 20px;
     width: 28%;
-    height: 70vh;
+    height: 68vh;
     border-radius: 30px;
 
     box-shadow: 0 0 7px 2px gray;
 
 }
-h1 {
+
+.scores h1 {
+    margin: 2px;
+    font-size: 5vh;
+}
+
+.scores h3 {
+    margin: 10px;
+    font-size: 3vh;
+}
+
+table * {
+    font-size: 2vh;
+}
+
+.header * {
+    font-size: 2.2vh;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.leaderTitle {
     margin-bottom: 0;
+    margin-top: 40px;
+    font-size: 6vh;
 }
 .scoreHolder {
     justify-content: space-between;
+    overflow: scroll;
 }
 
 a {
   color: black
+}
+
+.scrollTable {
+    height: 50vh;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
