--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -38,7 +38,7 @@ Added colors
   --progress-green: aquamarine;
   --purple1: #AF90A9;
   --purple2: #ffa2ca;
-  --primary3: #faecf2;
+  --primary3: #ffffff;
   --darkgrey: #575757;
   --medgrey: #acacac;
   --grey: #8f898c;
