--- a/client/src/components/modules/SingleMessage.css
+++ b/client/src/components/modules/SingleMessage.css
@@ -8,13 +8,6 @@
   flex-shrink: 0;
 }
 
-.SingleMessage-content {
-  /* padding: var(--s) var(--m); */
-  /* background: var(--black); */
-  border-radius: var(--s);
-  width: 10vw;
-  overflow-wrap: break-word;
-}
 
 .SingleMessage-mine .SingleMessage-content {
   background: var(--primary--dim);
@@ -22,5 +15,8 @@
 }
 
 .messageyeet {
+  border-radius: var(--s);
+  width: 18vw;
   overflow-wrap: break-word;
+  hyphens: auto;
 }
