--- a/client/src/components/modules/Cell.css
+++ b/client/src/components/modules/Cell.css
@@ -64,7 +64,7 @@
   background-repeat: no-repeat;
 }
 .golden {
-  background-image: url("../../public/images/clown.png");
+  background-image: url("../../public/images/pixil-frame-0.png");
   background-size: 100%;
   background-repeat: no-repeat;
 }
