--- a/client/src/components/modules/Chat.css
+++ b/client/src/components/modules/Chat.css
@@ -17,7 +17,7 @@
   flex-direction: column-reverse;
   flex-grow: 1;
 
-
+  overflow-x: visible;
   overflow-y: auto;
   margin-left: 10%;
   margin-right: 10%;
